--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -478,9 +478,7 @@
         "details": {
             "created_at": "Представлено на:",
             "fund_name": "Название фонда:",
-            "id": "ID:",
-            "number_of_records": "Количество персональных данных:",
-            "title": "Статус заявки"
+            "status": "Запрос статуса:"
         },
         "digid_expired": {
             "description": "Снова войдите в систему DigiD и снова запустите приложение.",
@@ -498,15 +496,18 @@
         },
         "record": {
             "answer": "Ответил",
-            "answer_btn": "Ответить",
             "cancel_btn": "Отмена",
             "new": "новое сообщение",
             "new_message": "Новый запрос",
             "send_btn": "Отправить",
-            "view": "Посмотреть"
-        },
-        "records": {
-            "title": "Мои данные"
+            "view": "Посмотреть",
+            "add_document_label": "Добавить документ",
+            "answer_btn": "Ответьте на этот вопрос",
+            "answer_btn_info": "Нажмите кнопку<strong>\"Ответить на этот вопрос</strong>\", чтобы отправить дополнительную информацию. Информация будет добавлена в заявку.",
+            "answer_question_label": "Ответьте на вопрос",
+            "my_answer": "Мой ответ",
+            "my_message": "Мое сообщение",
+            "optional_label": "(необязательно)"
         },
         "sign_up": {
             "app": {
@@ -624,7 +625,27 @@
             "step": "Шаг {{step}}",
             "step_out_of": "Шаг {{step}}"
         },
-        "title": "Запрос #{{ id }}"
+        "title": "Запрос #{{ id }}",
+        "clarifications": {
+            "info_requested": "Дополнительный вопрос",
+            "provide_info": "Ответьте на вопрос",
+            "subtitle": "Заявка еще не заполнена. Необходима дополнительная информация. Пожалуйста, ознакомьтесь с вопросом ниже и нажмите на кнопку, чтобы ответить.",
+            "title": "Открытые вопросы ({{ count }})",
+            "info_responded_count": "{{count}} сообщение"
+        },
+        "labels": {
+            "date": "Дата:",
+            "question": "Вопрос",
+            "question_from": "Вопрос от {{ name }}"
+        },
+        "records": {
+            "subtitle": "В этом блоке содержится личная информация, которую вы указали в заявке на получение средств.",
+            "title": "Мои данные ({{ count }})"
+        },
+        "subtitle": "Эта страница содержит информацию о заявке. Здесь можно просмотреть статус, заполненные данные и дополнительные вопросы.",
+        "modal": {
+            "title": "Дополнительный вопрос"
+        }
     },
     "fund_requests": {
         "breadcrumbs": {
@@ -832,11 +853,11 @@
         },
         "file_uploader": {
             "attachments": "Вложения",
-            "max_files": "Макс. {[ количество ]} файлов",
             "max_size": "максимальный размер 8 Мб",
             "or": "или",
             "title": "Загрузить документ",
-            "upload_button": "Загрузить документ"
+            "upload_button": "Загрузить документ",
+            "max_files": "Макс. {{ count }} файлов"
         },
         "info_box": {
             "2fa_description": "Для получения дополнительной информации о 2FA посетите наш сайт:",
@@ -2308,7 +2329,8 @@
             "name_asc": "Имя (по возрастанию)",
             "name_desc": "Имя (по убыванию)",
             "price_asc": "Цена (растет)",
-            "price_desc": "Цена (по убыванию)"
+            "price_desc": "Цена (по убыванию)",
+            "randomized": "Случайный"
         },
         "title": "Предложение",
         "view": {
@@ -2681,7 +2703,9 @@
                 "fund_name": "Название фонда",
                 "id": "ID",
                 "price": "Сумма",
-                "title": "Название"
+                "title": "Название",
+                "cancellation_note": "Сообщение поставщика:",
+                "rejection_note": "Сообщение поставщика:"
             },
             "loading": "Загрузка",
             "title": "Детали бронирования"
