update fund-request pending screen

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -946,6 +946,9 @@
                     "declined": "تم رفض الطلب",
                     "disregarded": "تم رفض الطلب",
                     "pending": "الطلب قيد الانتظار"
+                },
+                "heading": {
+                    "pending": "الأسئلة التي تمت الإجابة عليها أثناء تقديم الطلب:"
                 }
             },
             "header": {
