--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -539,6 +539,9 @@
                     "declined": "Заявка была отклонена",
                     "disregarded": "Заявка была отклонена",
                     "pending": "Заявка находится на рассмотрении"
+                },
+                "heading": {
+                    "pending": "Вопросы, на которые вы ответили во время подачи заявки:"
                 }
             },
             "header": {
