--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -539,6 +539,9 @@
                     "declined": "Заявка була відхилена",
                     "disregarded": "Заявка була відхилена",
                     "pending": "Заявка знаходиться на розгляді"
+                },
+                "heading": {
+                    "pending": "Відповіді на запитання під час подачі заявки:"
                 }
             },
             "header": {
